--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-scholarly==1.7.9
 pandas>=2.0.3
-python-Levenshtein>=0.25.0
-thefuzz>=0.19.0
+argparse>=1.4.0
 tenacity>=8.2.3
 python-dotenv>=1.0.0
+requests>=2.31.0
+beautifulsoup4>=4.12.3
+flask>=2.0.1
+flask-wtf>=1.0.0
+plotly>=5.5.0
