GIM is able to get titles but not abstracts

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,8 @@ tenacity>=8.2.3
 python-dotenv>=1.0.0
 requests>=2.31.0
 beautifulsoup4>=4.12.3
-flask>=2.0.1
+flask[async]>=2.0.1
+playwright>=1.42.0
+hypercorn>=0.14.4
+httpx>=0.24.1
+anyio>=3.7.1
